# koralReef

./: ARCHITECTURE.md  Cargo.toml  Makefile  README.md  config.toml.example  install.sh
.github/workflows/: release.yml
deployment/: Dockerfile  docker-compose.yml
src/: config.rs  lib.rs  main.rs  state.rs  storage.rs
src/bot/: commands.rs  mod.rs
src/core/: mod.rs  reclaimer.rs  safety.rs  scanner.rs
tests/: integration_test.rs
