[package]
name = "kora-reclaim-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
solana-client = "1.18"
solana-sdk = "1.18"
teloxide = { version = "0.12", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
spl-token = "4.0"
async-trait = "0.1"
serde_json = "1.0"
solana-account-decoder = "1.18"